@@ -1,3 +1,8 @@
+2009-12-25  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclCmdMZ.c:      CONST -> const
+	* generic/tclParse.c
+
 2009-12-23  Donal K. Fellows  <dkf@users.sf.net>
 
 	* library/safe.tcl (AliasSource, AliasExeName): [Bug 2913625]: Stop
